# CSPICE

./: .gitignore  CMakeLists.txt  Makefile  README.md  TR5_sim.c  a.out  cspice.h  diode_sweep.csv  inrush_current_test.cir  main.c  mna_solver.h  mna_solver_v2.h  mna_solver_v2_1.h  mna_solver_v2_1.txt  mna_solver_v2_5.h  mna_solver_v3.h  qwen-code-export-2026-03-22T15-20-47-415Z.html  roadmap.txt  run_tests.sh  test.c  test_no_xf.c  test_simple.c  test_transformer.c  test_transformer_csv.c  test_transformer_switching.c  three_phase_inrush.cir  transformer_comprehensive_test.cir  transformer_test.cir  transformer_test.csv  transformer_transient.csv
backup/: TR5_sim.c  plot.py
elements/: README.md  passive.c  passive.h  sources.c  sources.h  transformer.c  transformer.h  transformer_sat.c  transformer_sat.h
elements/nonlinear/: magnetization.c  magnetization.h  nonlinear.c  nonlinear.h
examples/: rc_circuit.cir  resistor_divider.cir
for results/: diode_clipper.csv  diode_logic.csv  diode_rectifier.csv  diode_simulation.csv  rectifier.c  rectifier.csv  switch_rc_simulation.csv
for results/lightning strike/: lightning_strike.c  plot.py
for results/long line/: TR5_sim.c  TR5_sim.txt
for results/long line overvoltage/: no_load_overvoltage_sim.c  plot_overvoltage_sim.py
for results/rectifier/: rectifier.c
include/: README.md  matrix.h  types.h
src/: README.md  matrix.c
src/cli/: README.md  cspice_cli.c  netlist.c  netlist.h
src/solver/: README.md  ac.c  ac.h  core.c  core.h  dc.c  dc.h  transient.c  transient.h
tests/: minimal_test.c  test_framework.h  test_main.c  test_netlist.c  test_passive.c  test_saturated_transformer_realistic.c  test_sources.c  test_transformer.c  test_transformer_comprehensive.c  test_validation.c
trash/: mna_solver.h  mna_solver_new_api.h  mna_solver_new_api_32bit.h  mna_solver_v2.1.c  mna_solver_v2.1.h  mna_solver_v2.txt  mna_solver_v2_1.h
